--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <junit.version>4.11</junit.version>
     <spring.version>5.2.7.RELEASE</spring.version>
     <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
+    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
   </properties>
 
   <dependencies>
@@ -59,6 +60,13 @@
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf-spring5</artifactId>
       <version>${thymeleaf.version}</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>${javax.servlet-api.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
